# ChangeLog for dev-python/networkx
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/networkx/ChangeLog,v 1.27 2014/08/15 00:17:57 blueness Exp $

  15 Aug 2014; Anthony G. Basile <blueness@gentoo.org> networkx-1.9.ebuild:
  Keyword ~ppc, bug #517086

*networkx-1.9 (14 Jul 2014)

  14 Jul 2014; Ian Delaney <idella4@gentoo.org> +networkx-1.9.ebuild:
  bump; drop py2.6 add py3.4, upgrade deps, doc build

  11 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
  networkx-1.8.1.ebuild:
  Added python-3.2 compat

  30 Jan 2014; Justin Lecher <jlec@gentoo.org> networkx-1.8.1.ebuild:
  Add Python 3 support, pygraphviz is optional but preferred

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> networkx-1.8.1.ebuild:
  Marked ~x64-macos, bug #487670

  12 Sep 2013; Michał Górny <mgorny@gentoo.org> networkx-1.6-r1.ebuild,
  networkx-1.7-r2.ebuild, networkx-1.8.1.ebuild:
  Replace virtual/pyparsing dep with dev-python/pyparsing. The split versions
  were removed and all in-tree versions support all impls now.

*networkx-1.8.1 (02 Sep 2013)

  02 Sep 2013; Patrick Lauer <patrick@gentoo.org> +networkx-1.8.1.ebuild:
  Bump

*networkx-1.6-r1 (18 Aug 2013)

  18 Aug 2013; Michał Górny <mgorny@gentoo.org> +networkx-1.6-r1.ebuild,
  -networkx-1.6.ebuild, -networkx-1.7-r1.ebuild, -networkx-1.7.ebuild:
  Backport the distutils-r1 conversion to 1.6. Drop redundant ebuilds.

  18 Aug 2013; Michał Górny <mgorny@gentoo.org> networkx-1.7-r2.ebuild:
  Add the test phase.

  18 Aug 2013; Michał Górny <mgorny@gentoo.org> networkx-1.7-r2.ebuild:
  Improve the distutils-r1 ebuild. Install docs into /usr/share/doc/${PF}.

*networkx-1.7-r2 (26 Apr 2013)

  26 Apr 2013; Justin Lecher <jlec@gentoo.org> +networkx-1.7-r2.ebuild,
  metadata.xml:
  Move to distutils-r1.eclass

  31 Dec 2012; Michał Górny <mgorny@gentoo.org> networkx-1.6.ebuild,
  networkx-1.7-r1.ebuild, networkx-1.7.ebuild:
  Use virtual/pyparsing.
